kube/kub-ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bigital-backend
  labels:
    app: bigital-backend
spec:
  ports:
  - name: bigital-backend-port
    port: 8080
  type: NodePort
