kube/ngnix-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: couchdb-ip
spec:
  backend:
    serviceName: nginx
    servicePort: 80
